; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-atm/src/extr_ifxmips_atm_ar9.c_ar9_shutdown.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-atm/src/extr_ifxmips_atm_ar9.c_ar9_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IFX_PMU_MODULE_PPE_SLL01 = common dso_local global i32 0, align 4
@IFX_PMU_MODULE_PPE_TC = common dso_local global i32 0, align 4
@IFX_PMU_MODULE_PPE_EMA = common dso_local global i32 0, align 4
@IFX_PMU_MODULE_PPE_QSB = common dso_local global i32 0, align 4
@IFX_PMU_MODULE_TPE = common dso_local global i32 0, align 4
@IFX_PMU_MODULE_DSL_DFE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar9_shutdown() #0 {
  %1 = load i32, i32* @IFX_PMU_MODULE_PPE_SLL01, align 4
  %2 = load i32, i32* @IFX_PMU_MODULE_PPE_TC, align 4
  %3 = or i32 %1, %2
  %4 = load i32, i32* @IFX_PMU_MODULE_PPE_EMA, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* @IFX_PMU_MODULE_PPE_QSB, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @IFX_PMU_MODULE_TPE, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @IFX_PMU_MODULE_DSL_DFE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @ltq_pmu_disable(i32 %11)
  ret void
}

declare dso_local i32 @ltq_pmu_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
